--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <h1>Git/Github testing</h1>
-    <p>added paragraph</p>
-</body>
+    <p id="headParagraph">added paragraph</p>
+    <p></p>
+    hello
+    <input type="text" />
+    <div>
+      <button onclick="check()">click here</button>
+      <p id="what">what</p>
+      <h2></h2>
+    </div>
+    <div class="container"></div>
+    <script src="./script.js"></script>
+  </body>
 </html>
